--- a/app/src/main/res/layout/activity_time_log.xml
+++ b/app/src/main/res/layout/activity_time_log.xml
@@ -33,7 +33,7 @@
 
     <Spinner
         android:id="@+id/spinner_phase"
-        android:layout_width="368dp"
+        android:layout_width="339dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="6dp"
@@ -48,10 +48,12 @@
         android:id="@+id/txt_start"
         android:layout_width="132dp"
         android:layout_height="32dp"
-        android:layout_marginTop="37dp"
+        android:layout_marginLeft="37dp"
+        android:layout_marginStart="37dp"
+        android:layout_marginTop="28dp"
         android:text="TextView"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_phase"
-        tools:layout_editor_absoluteX="37dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_phase" />
 
     <Button
         android:id="@+id/btn_start"
@@ -59,7 +61,7 @@
         android:layout_height="38dp"
         android:layout_marginEnd="37dp"
         android:layout_marginRight="37dp"
-        android:layout_marginTop="31dp"
+        android:layout_marginTop="28dp"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner_phase" />
