--- a/app/src/main/res/layout/activity_time_log.xml
+++ b/app/src/main/res/layout/activity_time_log.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TimeLogActivity">
+    tools:context=".activities.TimeLogActivity">
 
     <TextView
         android:id="@+id/txt_delta"
