--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -27,6 +27,7 @@
                 android:layout_height="wrap_content">
 
                 <android.support.design.widget.TextInputEditText
+                    android:id="@+id/nom_project"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="New project" />
